@@ -1,0 +1,10 @@
+local localhost
+proto tcp-server
+port 1194
+dev null
+verb 3
+tls-server
+dh /test/etc/vpnsrv/dh.pem
+ca /test/etc/vpnsrv/ca.pem
+key /test/etc/vpnsrv/key.pem
+cert /test/etc/vpnsrv/cert.pem
