@@ -2,6 +2,7 @@ libece X.Y ():
 	- rename: {cacert,cert,key}1 => init_{ca,cert,key},
 	  {cacaert,cert,key}2 => op_{ca,cert,key}
 	- bindings: fix typo in sb_conf_get_vpn_ip()
+	- sbsim/contrib: produce and test OpenVPN server
 
 libece 0.4 (31/10/2013):
 	- new host names: initialization-host, operation-host
